# bgr

./: CLAUDE.md  Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  foreground.rs  inference.rs  lib.rs  main.rs  models.rs
src/commands/: cut.rs  mask.rs  mod.rs  trace.rs  utils.rs
src/vectorizer/: mod.rs  vtracer.rs
